--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "url": "https://github.com/de-euforie/frontend-project-lvl2/issues"
   },
   "homepage": "https://github.com/de-euforie/frontend-project-lvl2#readme",
+  "type": "module",
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {}
+  },
   "dependencies": {
     "commander": "^7.0.0",
     "lodash": "^4.17.20"
@@ -27,6 +32,7 @@
   "devDependencies": {
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3"
   }
 }
