--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "url": "https://github.com/de-euforie/frontend-project-lvl2/issues"
   },
   "homepage": "https://github.com/de-euforie/frontend-project-lvl2#readme",
-  "type": "module",
   "jest": {
     "testEnvironment": "node",
     "transform": {}
@@ -30,9 +29,10 @@
     "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "eslint": "^7.19.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.2.1",
     "jest": "^26.6.3"
   }
 }
