--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,3 +13,4 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: make install
       - run: make lint
+      - run: make test
