--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,6 +11,9 @@ jobs:
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org/
-      - run: make install
-      - run: make lint
-      - run: make test
+      - name: npm install
+        run: make install
+      - name: run Linter
+        run: make lint
+      - name: run test & check test coverage
+        run: make test
