--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,3 +17,8 @@ jobs:
         run: make lint
       - name: run test & check test coverage
         run: make test
+        uses: paambaati/codeclimate-action@v2.2.4
+        env:
+          CC_TEST_REPORTER_ID: ${{ CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make test-coverage
